# nuscenes_add

./: CMakeLists.txt  README.md  package.xml
launch/: canbus.launch  lidar_ring.launch  lidarseg.launch
src/: nuscenes_add.cpp  nuscenes_lidarseg.cpp  nuscenes_ring_idx.cpp
